# sslplant

./: README.md  prepare_inatplant.py  pyproject.toml  requirements.txt
simdinov2/configs/: __init__.py  simdino_config.yaml  ssl_default_config.yaml
simdinov2/configs/train/: vitb16.yaml
simdinov2/data/: augmentations.py  collate.py  loaders.py  samplers.py  transforms.py
simdinov2/data/datasets/: __init__.py  decoders.py  image_net21k.py  inat21_plants.py
simdinov2/distributed/: __init__.py
simdinov2/eval/: args.py  eval.py  get_data.py  get_model.py
simdinov2/eval/models/: vision_transformer.py
simdinov2/fsdp/: __init__.py
simdinov2/layers/: attention.py  block.py  dino_head.py  patch_embed.py
simdinov2/logging/: __init__.py  helpers.py
simdinov2/loss/: __init__.py  dino_clstoken_loss.py  fused_ce_loss.py  ibot_patch_loss.py
simdinov2/models/: __init__.py  vision_transformer.py
simdinov2/run/: submit.py
simdinov2/run/train/: train.py
simdinov2/train/: __init__.py  ssl_meta_arch_sim.py  train.py
simdinov2/utils/: checkpoint.py  cluster.py  config.py  param_groups.py  utils.py
